--- a/huongdan/index.html
+++ b/huongdan/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hướng Dẫn Sử Dụng Tool Thành Quý Bot</title>
+    <title>Hướng Dẫn Sử Dụng Tool Thành Quý Tool</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
@@ -67,7 +67,7 @@
 <body>
 <div class="container-fluid">
 		<center>
-            <h5>TẢI TERMUX MỚI NHẤT </h5>
+            <h5>TẢI TERMUX VIP PRO </h5>
         </center>
     <center>
         <div class="d-flex mb-3">
@@ -87,23 +87,6 @@
                 </svg> Tải App Termux
             </a>
         </div>
-        <div class="table-responsive">
-            <table class="table hover multiple-select-row data-table-export nowrap">
-                <tbody>
-                <tr>
-                    <td>Kích thước</td>
-                    <td><span>97.0 MB</span></td>
-                </tr>
-                <tr>
-                    <td>Phiên bản</td>
-                    <td><span>0.119.0</span></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <center>
-            <h5>TẢI TOOL PYTHON VÀ THÔNG TIN PYTHON</h5>
-        </center>
         <br>
         <div class="d-flex mb-3">
             <div class="d-flex">
@@ -111,30 +94,16 @@
                     <img src="https://www.svgrepo.com/show/376344/python.svg" alt="logo">
                 </figure>
                 <div class="d-inline-block align-self-center">
-                    <div>&nbsp;JirayTool.py</div>
+                    <div>&nbsp;ThanhQuyTool.py</div>
                 </div>
             </div>
         </div>
         <div style="margin: 10px 0;">
-            <a href="https://www.mediafire.com/file/ub2x93sxw3g30p5/JirayTool.py/file" class="btn btn-info btn-block btn-sm" rel="nofollow">
+            <a href="https://www.mediafire.com/file/bt84g7b7f2sis1v/ThanhQuyTool.py/file" class="btn btn-info btn-block btn-sm" rel="nofollow">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
                 </svg> Tải Tool Python
             </a>
-        </div>
-        <div class="table-responsive">
-            <table class="table hover multiple-select-row data-table-export nowrap">
-                <tbody>
-                <tr>
-                    <td>Kích thước</td>
-                    <td><span>1.3 MB</span></td>
-                </tr>
-                <tr>
-                    <td>Phiên bản</td>
-                    <td><span>1.0.2</span></td>
-                </tr>
-                </tbody>
-            </table>
         </div>
         <div class="step-instructions">
             <h4>HƯỚNG DẪN SETUP VÀ SỬ DỤNG TOOL</h4>
